--- a/accounts/templates/accounts/status.html
+++ b/accounts/templates/accounts/status.html
@@ -42,4 +42,18 @@
       </div>
     </div>
   </div>
+
+  <div class="col">
+    <div class="col-md">
+      <div class="card text-center text-white  mb-3" id="orders-pending">
+        <div class="card-header">
+          <h5 class="card-title">Out for Delivery Orders</h5>
+          <hr class="my-2 border-white">
+        </div>
+        <div class="card-body">
+          <h3 class="card-title">{{ out_for_delivery_orders }}</h3>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
