--- a/accounts/templates/accounts/customer_form.html
+++ b/accounts/templates/accounts/customer_form.html
@@ -1,4 +1,4 @@
-{% extends "accounts/main.html" %}
+{% extends "accounts/main.html." %}
 
 {% load static %}
 
@@ -9,7 +9,7 @@
 
     {{ form }}
 
-    <input type="submit" value="Create Order">
+    <input type="submit" value="Create Customer">
 </form>
 
 {% endblock content %}
