--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -11,19 +11,19 @@
         <h5>CUSTOMERS</h5>
         <hr>
         <div class="card card-body">
-            <a class="btn custom-button btn-sm btn-block" href="" style="margin-bottom: 20px">Create Customer</a>
+            <a class="btn custom-button btn-sm btn-block" href="{% url "create_customer" %}" style="margin-bottom: 20px">Create Customer</a>
             <table class="table table-sm">
                 <tr>
                     <th>Customer</th>
                     <th>Orders</th>
-                    <th></th>
+                    <th style="text-align: center;">Customer Profile</th>
                 </tr>
 
                 {% for customer in customers %}
                 <tr>
                     <td>{{ customer.name }}</td>
                     <td>{{ customer.phone }}</td>
-                    <td style="text-align: end;">
+                    <td style="text-align: center;">
                         <a href="{% url 'customer' customer.id %}" class="btn btn-sm custom-button">View Profile</a>
                     </td>
                 </tr>
@@ -52,10 +52,10 @@
                     <td>{{ order.date_created }}</td>
                     <td>{{ order.status }}</td>
                     <td style="text-align: center;">
-                        <a href="" class="btn btn-sm custom-button">Update Order</a>
+                        <a href="{% url "update_order" order.id %}" class="btn btn-sm custom-button">Update Order</a>
                     </td>
                     <td style="text-align: center;">
-                        <a href="" class="btn btn-sm custom-button">Delete Order</a>
+                        <a href="{% url "delete_order" order.id %}" class="btn btn-sm custom-button">Delete Order</a>
                     </td>
                 </tr>
                 {% endfor %}
