--- a/accounts/templates/accounts/order_form.html
+++ b/accounts/templates/accounts/order_form.html
@@ -9,7 +9,7 @@
 
     {{ form }}
 
-    <input type="submit" value="Create Order">
+    <input type="submit" value="{{ function }}">
 </form>
 
 {% endblock content %}
