--- a/accounts/templates/accounts/customer_form.html
+++ b/accounts/templates/accounts/customer_form.html
@@ -3,26 +3,26 @@
 {% load static %}
 
 {% block content %}
+
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header bg-dark text-white text-center">
+                <div class="card-subtitle bg-dark text-white pt-2 text-center">
                     <h4>{{ function }}</h4>
                 </div>
+
                 <div class="card-body">
-                    <form action="" method="post" class="needs-validation" novalidate>
+                    <form action="" method="post">
                         {% csrf_token %}
 
                         {% for field in form %}
-                        <div class="form-group">
-                            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                        <div class="d-flex justify-content-center mt-2" style="padding-bottom: 10px;">
+                            <label for="{{ field.id_for_label }}" class="form-label" style="padding-right: 10%; width: 30%;">{{ field.label }}</label>
+                            
                             {{ field }}
-                            {% if field.errors %}
-                                <div class="text-danger mt-1">
-                                    {{ field.errors|striptags }}
-                                </div>
-                            {% endif %}
+                            
+                            
                         </div>
                         {% endfor %}
 
@@ -35,20 +35,5 @@
         </div>
     </div>
 </div>
+
 {% endblock content %}
-
-{% comment %} {% extends "accounts/main.html" %}
-
-{% load static %}
-
-{% block content %}
-
-<form action="" method="post">
-    {% csrf_token %}
-
-    {{ form }}
-
-    <input type="submit" value="{{ function }}">
-</form>
-
-{% endblock content %} {% endcomment %}
