--- a/accounts/templates/accounts/product.html
+++ b/accounts/templates/accounts/product.html
@@ -5,6 +5,36 @@
 <br>
 
 <div class="row">
+    <div class="col">
+        <div class="col-md">
+            <div class="card text-center text-white  mb-3" id="total-orders">
+                <div class="card-header">
+                    <h5 class="card-title">Products</h5>
+                    <hr class="my-1 border-white">
+                </div>
+                <div class="card-body">
+                    <a href="{% url 'create_product'%}" class="btn btn-sm custom-button-1">Create New Product</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col">
+        <div class="col-md">
+            <div class="card text-center text-white  mb-3" id="orders-pending">
+                <div class="card-header">
+                    <h5 class="card-title">Total Products</h5>
+                    <hr class="my-1 border-white">
+                </div>
+                <div class="card-body">
+                    <h3 class="card-title">{{ products_count }}</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
     <div class="col-md">
         <div class="card card-body">
             <h5>Products</h5>
@@ -24,18 +54,18 @@
                 </tr>
 
                 {% for product in products %}
-                    <tr>
-                        <td>{{ product }}</td>
-                        <td>{{ product.category }}</td>
-                        <td>${{ product.price }}</td>
+                <tr>
+                    <td>{{ product }}</td>
+                    <td>{{ product.category }}</td>
+                    <td>${{ product.price }}</td>
 
-                        <td style="text-align: center; width: 5%;">
-                            <a href="" class="btn btn-sm custom-button">Update</a>
-                        </td>
-                        <td style="text-align: center; width: 5%;">
-                            <a href="" class="btn btn-sm custom-button">Delete</a>
-                        </td>
-                    </tr>
+                    <td style="text-align: center; width: 5%;">
+                        <a href="" class="btn btn-sm custom-button">Update</a>
+                    </td>
+                    <td style="text-align: center; width: 5%;">
+                        <a href="" class="btn btn-sm custom-button">Delete</a>
+                    </td>
+                </tr>
                 {% endfor %}
 
             </table>
