--- a/accounts/templates/accounts/product.html
+++ b/accounts/templates/accounts/product.html
@@ -9,7 +9,7 @@
         <div class="col-md">
             <div class="card text-center text-white  mb-3" id="total-orders">
                 <div class="card-header">
-                    <h5 class="card-title">Products</h5>
+                    <h5 class="card-title">Edit Products</h5>
                     <hr class="my-1 border-white">
                 </div>
                 <div class="card-body">
@@ -60,10 +60,10 @@
                     <td>${{ product.price }}</td>
 
                     <td style="text-align: center; width: 5%;">
-                        <a href="" class="btn btn-sm custom-button">Update</a>
+                        <a href="{% url 'update_product' product.id %}" class="btn btn-sm custom-button">Update</a>
                     </td>
                     <td style="text-align: center; width: 5%;">
-                        <a href="" class="btn btn-sm custom-button">Delete</a>
+                        <a href="{% url 'delete_product' product.id %}" class="btn btn-sm custom-button">Delete</a>
                     </td>
                 </tr>
                 {% endfor %}
