filtering orders, custom filter

--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -58,6 +58,8 @@
     <div class="col-md">
         <div class="card card-body">
             <form action="" method="get">
+                {{ filter.form }}
+
                 <button class="btn custom-button" type="submit">Search Customer</button>
             </form>
         </div>
