--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,1 +1,36 @@
-<h3>Login Page</h3>
+{% extends 'accounts/authentication.html' %}
+
+{% block title %}Login Page{% endblock %}
+
+{% block content %}
+
+<form action="" method="post">
+
+    <h3>Login Page</h3>
+    
+    {% csrf_token %}
+    
+    <label for="username">{{ form.username.label }}</label>
+    {{ form.username }}
+
+    <label for="password">{{ form.password.label }}</label>
+    {{ form.password }}
+
+    <input type="submit" value="Login" class="custom-button">
+
+    {% if form.errors %}
+    <div class="form-errors">
+        <ul>
+            {% for field, errors in form.errors.items %}
+            <li>{{ field|capfirst }}: {{ errors|join:", " }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+    {% endif %}
+
+    <div class="form-footer">
+        <p>Don't have an account?<span><a href="{% url 'register' %}">Register</a></span></p>
+    </div>
+</form>
+
+{% endblock %}
