--- a/accounts/templates/accounts/authentication.html
+++ b/accounts/templates/accounts/authentication.html
@@ -10,6 +10,8 @@
     <title>{% block title %}Default Title{% endblock %}</title>
 
     <link rel="stylesheet" href="{% static 'css/authentication.css' %}">
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
