--- a/static/css/authentication.css
+++ b/static/css/authentication.css
@@ -60,7 +60,7 @@ input:focus {
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.3s ease;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .custom-button:hover {
@@ -114,3 +114,21 @@ a:hover {
     margin-bottom: 5px;
 }
 
+.alert {
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.alert.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.alert.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
