--- a/static/css/main.css
+++ b/static/css/main.css
@@ -48,3 +48,49 @@ body {
     border-radius: 5px;
     margin-right: 10px;
 }
+
+.welcome-text {
+    font-size: 1rem;
+    color: #ffffff;
+    font-weight: bold;
+    margin-right: 1rem;
+    align-self: center;
+}
+
+.logout-button {
+    background-color: #ffffff;
+    color: #000000;
+    border: none;
+    width: auto;
+    padding: 0 10px;
+    font-weight: 500;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    align-self: center;
+}
+
+.logout-button:hover {
+    /* background-color: #f8f9fa; */
+    background-color: blue;
+    color: #000000;
+}
+
+.card {
+    border-radius: 8px;
+    border: 1px solid #ddd;
+    background-color: #ffffff;
+}
+
+.card-body {
+    padding: 20px;
+}
+
+.form-label {
+    font-weight: bold;
+    color: #333333;
+}
