--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,12 +1,15 @@
 {% extends 'accounts/authentication.html' %}
 
+{% load custom_filters %}
+
 {% block title %}Login Page{% endblock %}
 
 {% block content %}
 
 <form action="" method="post">
-    <h3>Login Page</h3>
 
+    <h3>Login Page</h3>
+    
     {% csrf_token %}
     
     <!-- Username Field -->
@@ -31,17 +34,42 @@
     </div>
     {% endif %}
 
-    {% if messages %}
-    <div class="messages form-errors">
+    {% comment %} Simple Message {% endcomment %}
+    {% comment %} {% if messages %}
+    <div class="messages">
         {% for message in messages %}
         <div class="alert {{ message.tags }}">{{ message }}</div>
         {% endfor %}
     </div>
-    {% endif %}
+    {% endif %} {% endcomment %}
 
-    <!-- Form Footer -->
+    {% comment %} Message in Alert Box {% endcomment %}
+    {% comment %} {% if messages %}
+    <script>
+        {% for message in messages %}
+            {% if message.tags == 'success' %}
+                alert("{{ message|escapejs }}");
+            {% endif %}
+        {% endfor %}
+    </script>
+    {% endif %}     {% endcomment %}
+
+    {% comment %} Message in Styled Alert Box {% endcomment %}
+    <script>
+        {% for message in messages %}
+            {% if message.tags == 'success' %}
+                Swal.fire({
+                    title: 'Success!',
+                    text: "{{ message|escapejs }}",
+                    icon: 'success',
+                    confirmButtonText: 'OK'
+                });
+            {% endif %}
+        {% endfor %}
+    </script>    
+
     <div class="form-footer">
-        <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+        <p>Don't have an account?<span><a href="{% url 'register' %}">Register</a></span></p>
     </div>
 </form>
 
